refactor template folder

--- a/folder-template/index.html
+++ b/folder-template/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Title template</title>
+	<link rel="stylesheet" href="css/style.css">
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 </head>
 
