project structure has been changed

--- a/winter-2022-course/main-page/index.html
+++ b/winter-2022-course/main-page/index.html
@@ -16,20 +16,23 @@
 	<main>
 		<ul>
 			<li>
-				<p><a href="lesson1/">Lesson 1 homework</a></p>
+				<p><a href="../homeworks/hw-lesson01/">Lesson 1 homework</a></p>
 			</li>
 			<li>
-				<p><a href="lesson2/">Lesson 2 homework</a></p>
+				<p><a href="../homeworks/hw-lesson02/">Lesson 2 homework</a></p>
 			</li>
 			<li>
-				<p><a href="lesson3/">Lesson 3 homework</a></p>
+				<p><a href="../homeworks/hw-lesson03/">Lesson 3 homework</a></p>
 			</li>
 			<li>
-				<p><a href="#">Lesson 4 homework</a></p>
+				<p><a href="../homeworks/hw-lesson04/">Lesson 4 homework</a></p>
 				<ul>
-					<li><a href="lesson4/index.html">Lesson 4 HW: part 1</a></li>
-					<li><a href="lesson4/hrstat.html">Lesson 4 HW: part 2</a></li>
+					<li><a href="../homeworks/hw-lesson04/index.html">Lesson 4 HW: part 1</a></li>
+					<li><a href="../homeworks/hw-lesson04/hrstat.html">Lesson 4 HW: part 2</a></li>
 				</ul>
+			</li>
+			<li>
+				<p><a href="../homeworks/hw-lesson05/">Lesson 5 homework</a></p>
 			</li>
 		</ul>
 	</main>
