lesson6 homework has beeen complited

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			<li>
 				<p><a href="winter-2022-course/homeworks/hw-lesson05/">Lesson 5 homework</a></p>
 			</li>
+			<li>
+				<p><a href="winter-2022-course/homeworks/hw-lesson06/">Lesson 6 homework</a></p>
+			</li>
 		</ul>
 	</main>
 	<footer>
