main page logo has been changed

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 		</ul>
 	</main>
 	<footer>
-		<a href="https://github.com/dobraccoon?tab=repositories" target="_blank"><img alt="Dobraccoon's logo"
-				src="img/dobraccoon.png"></a>
+		<div class="dobraccoon-logo">
+			<a href="https://github.com/dobraccoon?tab=repositories" target="_blank"><img alt="Dobraccoon's logo"
+					src="img/dobraccoon.png"></a>
+		</div>
 	</footer>
 </body>
 
