Practice 1 has been complited

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<p><a href="winter-2022-course/homeworks/hw-lesson03/">Lesson 3 homework</a></p>
 			</li>
 			<li>
-				<p><a href="winter-2022-course/homeworks/hw-lesson04/">Lesson 4 homework</a></p>
+				<p>Lesson 4 homework</a></p>
 				<ul>
 					<li><a href="winter-2022-course/homeworks/hw-lesson04/index.html">Lesson 4 HW: part 1</a></li>
 					<li><a href="winter-2022-course/homeworks/hw-lesson04/hrstat.html">Lesson 4 HW: part 2</a></li>
@@ -36,6 +36,12 @@
 			</li>
 			<li>
 				<p><a href="winter-2022-course/homeworks/hw-lesson06/">Lesson 6 homework</a></p>
+			</li>
+			<li>
+				<p>Practice №1</p>
+				<ol>
+					<li><a href="winter-2022-course/homeworks/hw-practice1/carpart1.html">Practice №1: part 1</a></li>
+				</ol>
 			</li>
 		</ul>
 	</main>
