--- a/winter-2022-course/homeworks/hw-practice1/carpart1.html
+++ b/winter-2022-course/homeworks/hw-practice1/carpart1.html
@@ -5,8 +5,11 @@
 	<meta charset="UTF-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/car-style-part1.css" rel="stylesheet">
 	<title>Practice 1:Dobraccoon HW</title>
+</head>
+
+<body>
 	<div class="wrapper">
 		<header>
 			<div class="who-we-are">
@@ -26,6 +29,6 @@
 			<img src="img/engine.png" alt="" class="engine-image">
 		</main>
 	</div>
-</head>
+</body>
 
 </html>
