new materials has been added

--- a/winter-2022-course/homeworks/hw-practice1/carpart1.html
+++ b/winter-2022-course/homeworks/hw-practice1/carpart1.html
@@ -6,7 +6,7 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<link href="css/car-style-part1.css" rel="stylesheet">
-	<title>Practice 1:Dobraccoon HW</title>
+	<title>Practice 1, part1:Dobraccoon HW</title>
 </head>
 
 <body>
