template index into JS has been changed

--- a/self-study/js/folder-template/index.html
+++ b/self-study/js/folder-template/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
-    <title>LessonN(description)</title>
-    <link href="css/style.css" rel="stylesheet">
-    <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
+	<title>LessonN(description)</title>
+	<link href="css/style.css" rel="stylesheet">
+	<script type="text/javascript" src="js/main.js"></script>
+	<meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
 </head>
 
 <body>
