template index has been changed

--- a/self-study/js/folder-template/index.html
+++ b/self-study/js/folder-template/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>LessonN(description)</title>
+	<title>JS: LessonN</title>
 	<link href="css/style.css" rel="stylesheet">
 	<script type="text/javascript" src="js/main.js"></script>
 	<meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
