practice 1 part 2 has been complited

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 				<ol>
 					<li><a href="winter-2022-course/homeworks/hw-practice1/carpart1.html">Practice №1: part 1</a></li>
 				</ol>
+				<ol>
+					<li><a href="winter-2022-course/homeworks/hw-practice1/carpart2.html">Practice №1: part 2</a></li>
+				</ol>
 			</li>
 		</ul>
 	</main>
