--- a/winter-2022-course/homeworks/hw-practice1/carpart2.html
+++ b/winter-2022-course/homeworks/hw-practice1/carpart2.html
@@ -12,16 +12,21 @@
 <body>
 	<div class="wrapper">
 		<main>
-			<div class="service-block">
-				<img src="img/car_bay_24x.png" alt="Here must be car-style-part2 image">
-				<h2>Multi Point Inspections</h2>
-				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
-					dolores et quas.</p>
+			<div class="white-service-block">
+				<div class="inner-service-block">
+					<img class="service-icon" src="img/car_bay_24x.png" alt="Here must be car-style-part2 image">
+					<h2>Multi Point Inspections</h2>
+					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
+						dolores et quas.</p>
+				</div>
 			</div>
-			<div class="service-block"><img src="img/car_tires_24x.png" alt="Here must be car_tires_24x image">
-				<h2>Tires</h2>
-				<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
-					dolores et quas.</p>
+			<div class="white-service-block">
+				<div class="inner-service-block">
+					<img class="service-icon" src="img/car_tires_24x.png" alt="Here must be car_tires_24x image">
+					<h2>Tires</h2>
+					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
+						dolores et quas.</p>
+				</div>
 			</div>
 		</main>
 	</div>
