--- a/winter-2022-course/homeworks/hw-lesson07/index.html
+++ b/winter-2022-course/homeworks/hw-lesson07/index.html
@@ -11,25 +11,15 @@
 
 <body>
 	<div class="wrapper">
-		<header>
-			<div class="make-an-appointment">
-				<h1>Top notch service is our main auto motive</h1>
-				<p>Make an Appointment</p>
+		<div class="header-block">
+			<div class="auto-motive">
+				Top notch service is our main auto motive
 			</div>
-		</header>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur totam velit, consequuntur tempora esse voluptates fuga unde quod voluptatem vero quasi quo iste vitae aspernatur harum molestias eaque inventore deserunt.</p>
-		<!-- <footer>
-			<div class="contact-info">
-				<h2>Contact</h2>
-				<ul>
-					<li class="contact-address">321 Pikes Place Parkway
-					Seattle, WA 54321</li>
-					<li  class="contact-phone-number">(555) 765-4321</li>
-					<li class="">Info@company.com</li>
-					<li class="contact-working-time">Mon - Sat: 7:000 am - 6:00 pm</li>
-				</ul>
-			</div>
-		</footer> -->
+			<p class="appointment-button">Make an Appointment</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur totam velit, consequuntur tempora esse
+				voluptates fuga unde quod voluptatem vero quasi quo iste vitae aspernatur harum molestias eaque inventore
+				deserunt.</p>
+		</div>
 	</div>
 </body>
 
