lesson07 hw part1 has been complited

--- a/winter-2022-course/homeworks/hw-lesson07/index.html
+++ b/winter-2022-course/homeworks/hw-lesson07/index.html
@@ -11,15 +11,16 @@
 
 <body>
 	<div class="wrapper">
-		<div class="header-block">
-			<div class="auto-motive">
+		<header class="header-block">
+			<h1 class="auto-motive">
 				Top notch service is our main auto motive
-			</div>
-			<p class="appointment-button">Make an Appointment</p>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur totam velit, consequuntur tempora esse
-				voluptates fuga unde quod voluptatem vero quasi quo iste vitae aspernatur harum molestias eaque inventore
-				deserunt.</p>
-		</div>
+			</h1>
+			<form action="index.html">
+				<button class="appointment-button">
+					<p>Make an Appointment</p>
+				</button>
+			</form>
+		</header>
 	</div>
 </body>
 
