lesson 07 hw added to the main page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 					<li><a href="winter-2022-course/homeworks/hw-practice1/carpart2.html">Practice №1: part 2</a></li>
 				</ol>
 			</li>
+			<li>
+				<p><a href="winter-2022-course/homeworks/hw-lesson07/">Lesson 7 homework</a></p>
+			</li>
 		</ul>
 	</main>
 	<footer>
