HW lesson 07  part 2 has been complited

--- a/winter-2022-course/homeworks/hw-lesson07/index.html
+++ b/winter-2022-course/homeworks/hw-lesson07/index.html
@@ -17,10 +17,22 @@
 			</h1>
 			<form action="index.html">
 				<button class="appointment-button">
-					<p>Make an Appointment</p>
+					<span>Make an Appointment</span>
 				</button>
 			</form>
 		</header>
+		<footer class="footer-block">
+			<div class="contact-block">
+				<h3>Contact</h3>
+				<ul class="contact-info">
+					<li class="address">321 Pikes Place Parkway
+						Seattle, WA 54321</li>
+					<li class="phone-number">(555) 765-4321</li>
+					<li class="email">Info@company.com</li>
+					<li class="working-hours">Mon - Sat: 7:000 am - 6:00 pm</li>
+				</ul>
+			</div>
+		</footer>
 	</div>
 </body>
 
