HW Lesson 8 has been complited

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 			<li>
 				<p><a href="winter-2022-course/homeworks/hw-lesson07/">Lesson 7 homework</a></p>
 			</li>
+			<li>
+				<p><a href="winter-2022-course/homeworks/hw-lesson08/">Lesson 8 homework</a></p>
+			</li>
 		</ul>
 	</main>
 	<footer>
