HW Lesson 8 has been fixed

--- a/winter-2022-course/homeworks/hw-lesson08/index.html
+++ b/winter-2022-course/homeworks/hw-lesson08/index.html
@@ -18,7 +18,7 @@
 				<li>
 					<h3>24/7 Love & Care</h3>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
-						dolores et quas.</p>
+						dolores et quas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quas, nemo, debitis culpa sapiente consequuntur quam eaque unde sint dolorem quod voluptatibus eius aut fuga expedita tempora mollitia ea repellendus?</p>
 				</li>
 				<li>
 					<h3>On-site Veterinarian</h3>
