Full code format

--- a/self-study/js/lesson1/index.html
+++ b/self-study/js/lesson1/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
 
 <head>
-	<title>JS:Lesson1</title>
-	<link href="css/style.css" rel="stylesheet">
-	<script type="text/javascript" src="js/main.js"></script>
-	<meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
+    <title>JS:Lesson1</title>
+    <link href="css/style.css" rel="stylesheet">
+    <script src="js/main.js" type="text/javascript"></script>
+    <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
 </head>
 
 <body>
-	<p>Hello JS <input id="message" /></p>
+<p>Hello JS <input id="message"/></p>
 </body>
 
 </html>
