--- a/winter-2022-course/homeworks/hw-lesson06/index.html
+++ b/winter-2022-course/homeworks/hw-lesson06/index.html
@@ -2,39 +2,45 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<link href="css/style.css" rel="stylesheet">
-	<title>Lesson 6:Dobraccoon HW</title>
-	<div class="wrapper">
-		<header>
-			<h1>Lesson 6 homework</h1>
-		</header>
-		<div class="main">
-			<h2>Task 1</h2>
-			<div class="task1"><img src="img/dobraccoon.png" alt="here must be dobraccoon image"></div>
-			<h2>Task 2</h2>
-			<div class="task2">
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, soluta, velit deleniti iusto praesentium
-					recusandae suscipit nam sunt harum a aut. Voluptatum pariatur modi consectetur qui eum, molestiae vero
-					non!</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, soluta, velit deleniti iusto praesentium
-					recusandae suscipit nam sunt harum a aut. Voluptatum pariatur modi consectetur qui eum, molestiae vero
-					non!</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, soluta, velit deleniti iusto praesentium
-					recusandae suscipit nam sunt harum a aut. Voluptatum pariatur modi consectetur qui eum, molestiae vero
-					non!</p>
-			</div>
-			<h2>Task 3</h2>
-			<span class="task3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, est explicabo. Fuga
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Lesson 6:Dobraccoon HW</title>
+    <div class="wrapper">
+        <header>
+            <h1>Lesson 6 homework</h1>
+        </header>
+        <div class="main">
+            <h2>Task 1</h2>
+            <div class="task1"><img alt="here must be dobraccoon image" src="img/dobraccoon.png"></div>
+            <h2>Task 2</h2>
+            <div class="task2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, soluta, velit deleniti iusto
+                    praesentium
+                    recusandae suscipit nam sunt harum a aut. Voluptatum pariatur modi consectetur qui eum, molestiae
+                    vero
+                    non!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, soluta, velit deleniti iusto
+                    praesentium
+                    recusandae suscipit nam sunt harum a aut. Voluptatum pariatur modi consectetur qui eum, molestiae
+                    vero
+                    non!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, soluta, velit deleniti iusto
+                    praesentium
+                    recusandae suscipit nam sunt harum a aut. Voluptatum pariatur modi consectetur qui eum, molestiae
+                    vero
+                    non!</p>
+            </div>
+            <h2>Task 3</h2>
+            <span class="task3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, est explicabo. Fuga
 				beatae, voluptate omnis, asperiores maiores, distinctio porro molestias eligendi perspiciatis accusantium
 				cum? Soluta aspernatur distinctio assumenda ducimus ea.</span>
-				<h2>Task 4</h2>
-			<div class="task4"></div>
-		</div>
-		<footer></footer>
-	</div>
+            <h2>Task 4</h2>
+            <div class="task4"></div>
+        </div>
+        <footer></footer>
+    </div>
 
 </head>
 
