--- a/self-study/js/folder-template/index.html
+++ b/self-study/js/folder-template/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-	<title>JS: LessonN</title>
-	<link href="css/style.css" rel="stylesheet">
-	<script type="text/javascript" src="js/main.js"></script>
-	<meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
+    <title>JS: LessonN</title>
+    <link href="css/style.css" rel="stylesheet">
+    <script src="js/main.js" type="text/javascript"></script>
+    <meta content="text/html;charset=UTF-8" http-equiv="Content-Type">
 </head>
 
 <body>
