--- a/winter-2022-course/homeworks/hw-lesson04/hrstat.html
+++ b/winter-2022-course/homeworks/hw-lesson04/hrstat.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="css/hrstyle.css" rel="stylesheet" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link href="css/hrstyle.css" rel="stylesheet"/>
     <title>Lesson 4:Dobraccoon HW:HRStat</title>
-  </head>
+</head>
 
-  <body>
-    <header>
-      <h1>HR statistics: job search, interviews, hiring and recruiting</h1>
-    </header>
-    <main>
-      <img src="img/hrimage.png" class="hrimage" alt="hrimage" />
-      <p class="bold-text">
+<body>
+<header>
+    <h1>HR statistics: job search, interviews, hiring and recruiting</h1>
+</header>
+<main>
+    <img alt="hrimage" class="hrimage" src="img/hrimage.png"/>
+    <p class="bold-text">
         Vulputate vitae pellentesque scelerisque luctus consequat mattis
         pellentesque dui odio. Interdum aenean sit malesuada ornare sed gravida
         rhoncus, congue. Purus auctor nullam diam quis est hendrerit ac euismod.
-      </p>
-      <div class="second-block">
+    </p>
+    <div class="second-block">
         <p>
-          At facilisi sapien posuere eget nunc senectus proin nullam. Tortor
-          senectus in et sagittis, vitae diam cras dignissim. Varius adipiscing
-          eget diam nisi. Orci, consectetur vulputate metus ornare pharetra,
-          neque, fermentum. Vel nec rhoncus, non nunc, neque in massa. Feugiat
-          leo nam nisl lacinia amet, odio. Mi varius viverra risus vel.
+            At facilisi sapien posuere eget nunc senectus proin nullam. Tortor
+            senectus in et sagittis, vitae diam cras dignissim. Varius adipiscing
+            eget diam nisi. Orci, consectetur vulputate metus ornare pharetra,
+            neque, fermentum. Vel nec rhoncus, non nunc, neque in massa. Feugiat
+            leo nam nisl lacinia amet, odio. Mi varius viverra risus vel.
         </p>
         <p>
-          Amet, morbi sed pharetra, elit eget mi potenti. Condimentum orci
-          interdum feugiat lectus libero duis. Nisl massa, elementum varius sit.
-          Nunc felis, porttitor aliquam urna, accumsan et sed. Aliquet non sed
-          duis diam vehicula rhoncus. In dictum nullam tincidunt semper
-          pellentesque purus morbi sed. Ut aliquet velit pharetra, nisi nunc,
-          non.
+            Amet, morbi sed pharetra, elit eget mi potenti. Condimentum orci
+            interdum feugiat lectus libero duis. Nisl massa, elementum varius sit.
+            Nunc felis, porttitor aliquam urna, accumsan et sed. Aliquet non sed
+            duis diam vehicula rhoncus. In dictum nullam tincidunt semper
+            pellentesque purus morbi sed. Ut aliquet velit pharetra, nisi nunc,
+            non.
         </p>
-      </div>
-      <div class="bold-block">
+    </div>
+    <div class="bold-block">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet
         lectus quam viverra mus lobortis fermentum amet, eu. Pulvinar eu sed
         purus facilisi. Vitae id turpis tempus ornare turpis quis non. Congue
         tortor in tot euismod vulputate etiam eros. Vel accumsan at elit neque,
         ipsum.
-      </div>
-      <p>
+    </div>
+    <p>
         Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat
         mattis. Vitae mus blandit in neque amet non fringilla blandit:
-      </p>
-      <ul>
+    </p>
+    <ul>
         <li>A fermentum in morbi pretium aliquam adipiscing donec tempus.</li>
         <li>Vulputate placerat amet pulvinar lorem nisl.</li>
         <li>
-          Consequat feugiat habitant gravida quisque elit bibendum id adipiscing
-          sed.
+            Consequat feugiat habitant gravida quisque elit bibendum id adipiscing
+            sed.
         </li>
         <li>Etiam duis lobortis in fames ultrices commodo nibh.</li>
-      </ul>
-      <p>
+    </ul>
+    <p>
         Enim, vel massa odio diam. Blandit massa gravida feugiat elementum id
         nec sed leo. Nisi in ornare lectus eget. Urna, risus, consectetur
         volutpat lorem purus. Velit aliquet nibh vitae maecenas. Consectetur
@@ -64,7 +64,7 @@
         augue mattis tortor est justo, pharetra nibh risus. Facilisi at
         porttitor volutpat natoque proin amet, nulla. Vivamus ut lobortis
         sagittis curabitur tellus convallis eget netus vitae.
-      </p>
-    </main>
-  </body>
+    </p>
+</main>
+</body>
 </html>
