--- a/winter-2022-course/homeworks/hw-lesson07/index.html
+++ b/winter-2022-course/homeworks/hw-lesson07/index.html
@@ -2,38 +2,39 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<link href="css/style.css" rel="stylesheet">
-	<title>Lesson7:Dobraccoon HW</title>
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Lesson7:Dobraccoon HW</title>
 </head>
 
 <body>
-	<div class="wrapper">
-		<header class="header-block">
-			<h1 class="auto-motive">
-				Top notch service is our main auto motive
-			</h1>
-			<form action="index.html">
-				<button class="appointment-button">
-					<span>Make an Appointment</span>
-				</button>
-			</form>
-		</header>
-		<footer class="footer-block">
-			<div class="contact-block">
-				<h3>Contact</h3>
-				<ul class="contact-info">
-					<li class="address">321 Pikes Place Parkway
-						Seattle, WA 54321</li>
-					<li class="phone-number">(555) 765-4321</li>
-					<li class="email">Info@company.com</li>
-					<li class="working-hours">Mon - Sat: 7:000 am - 6:00 pm</li>
-				</ul>
-			</div>
-		</footer>
-	</div>
+<div class="wrapper">
+    <header class="header-block">
+        <h1 class="auto-motive">
+            Top notch service is our main auto motive
+        </h1>
+        <form action="index.html">
+            <button class="appointment-button">
+                <span>Make an Appointment</span>
+            </button>
+        </form>
+    </header>
+    <footer class="footer-block">
+        <div class="contact-block">
+            <h3>Contact</h3>
+            <ul class="contact-info">
+                <li class="address">321 Pikes Place Parkway
+                    Seattle, WA 54321
+                </li>
+                <li class="phone-number">(555) 765-4321</li>
+                <li class="email">Info@company.com</li>
+                <li class="working-hours">Mon - Sat: 7:000 am - 6:00 pm</li>
+            </ul>
+        </div>
+    </footer>
+</div>
 </body>
 
 </html>
