--- a/winter-2022-course/homeworks/hw-practice1/carpart2.html
+++ b/winter-2022-course/homeworks/hw-practice1/carpart2.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<link href="css/car-style-part2.css" rel="stylesheet">
-	<title>Practice 1, part1:Dobraccoon HW</title>
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="css/car-style-part2.css" rel="stylesheet">
+    <title>Practice 1, part1:Dobraccoon HW</title>
 </head>
 
 <body>
-	<div class="wrapper">
-		<main>
-			<div class="white-service-block">
-				<div class="inner-service-block">
-					<img class="service-icon" src="img/car_bay_24x.png" alt="Here must be car-style-part2 image">
-					<h2>Multi Point Inspections</h2>
-					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
-						dolores et quas.</p>
-				</div>
-			</div>
-			<div class="white-service-block">
-				<div class="inner-service-block">
-					<img class="service-icon" src="img/car_tires_24x.png" alt="Here must be car_tires_24x image">
-					<h2>Tires</h2>
-					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
-						dolores et quas.</p>
-				</div>
-			</div>
-		</main>
-	</div>
+<div class="wrapper">
+    <main>
+        <div class="white-service-block">
+            <div class="inner-service-block">
+                <img alt="Here must be car-style-part2 image" class="service-icon" src="img/car_bay_24x.png">
+                <h2>Multi Point Inspections</h2>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
+                    dolores et quas.</p>
+            </div>
+        </div>
+        <div class="white-service-block">
+            <div class="inner-service-block">
+                <img alt="Here must be car_tires_24x image" class="service-icon" src="img/car_tires_24x.png">
+                <h2>Tires</h2>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium corrupti quos
+                    dolores et quas.</p>
+            </div>
+        </div>
+    </main>
+</div>
 </body>
 
 </html>
